--- a/04 - Convolutional Neural Network/code/01 - CNN.ipynb
+++ b/04 - Convolutional Neural Network/code/01 - CNN.ipynb
@@ -5,7 +5,9 @@
    "id": "15f52fda",
    "metadata": {},
    "source": [
-    "# Introduction to Convolutional Neural Network and Computer Vision with TensorFlow"
+    "# Convolutional Neural Network and Computer Vision with TensorFlow\n",
+    "- <a href=\"#visualize\">Visualizing data</a>\n",
+    "- <a href=\"#end-to-end\">An end-to-end example</a>"
    ]
   },
   {
@@ -23,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "bf684e51",
+   "id": "5c2bb42a",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d5a1122b",
+   "id": "48cf015a",
    "metadata": {},
    "outputs": [
     {
@@ -75,16 +77,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76a35fdc",
+   "id": "d32259bf",
    "metadata": {},
    "source": [
+    "<div id=\"visualize\"></div>\n",
+    "\n",
     "## Visualize the food images"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "058426ac",
+   "id": "025033a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ff302ac0",
+   "id": "0f00f234",
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "29d119c4",
+   "id": "f2e919ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "b93edcd4",
+   "id": "6d46739c",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "f7511e86",
+   "id": "3e752909",
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +210,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e0f6d30",
+   "id": "80f04750",
    "metadata": {},
    "source": [
     "> Reason why `img` is returned in the function is that when `mpimg` read the image, it is turned to numpy array."
@@ -215,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "712bcdf2",
+   "id": "aec59bb9",
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "02cfd841",
+   "id": "998444db",
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e642b94d",
+   "id": "587dedd7",
    "metadata": {},
    "source": [
     "**Note:** Many machine learning models, including neural network prefer the values they work with to be between 0 and 1. Knowing this, one of the most common preprocessing steps for working is to **scale (normalize)** their pixel values by dividing the image arrays by 255. (Since 255 is the maximum pixel value)."
@@ -362,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "18fd0c9c",
+   "id": "66fc1ad3",
    "metadata": {},
    "outputs": [
     {
@@ -431,9 +435,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0cf2be2",
+   "id": "a9bf18dd",
    "metadata": {},
    "source": [
+    "<div id=\"end-to-end\"></div>\n",
+    "\n",
     "## An end-to-end Example\n",
     "\n",
     "Let's build a convolutional neural network to find patterns in our images, more specifically we are to:\n",
@@ -447,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "5bb81f25",
+   "id": "4c0f7710",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "f138d9f4",
+   "id": "5e840620",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "132d3be0",
+   "id": "2ca1473e",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "dca3ee60",
+   "id": "d38cac00",
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "e485a55b",
+   "id": "d4f3b356",
    "metadata": {},
    "outputs": [
     {
@@ -586,12 +592,166 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bbce0732",
+   "cell_type": "markdown",
+   "id": "004ae431",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**Model 2: Adding validation data while fitting the data**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "c9bb1dcc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "47/47 [==============================] - 55s 1s/step - loss: 0.5977 - accuracy: 0.6953 - val_loss: 0.4363 - val_accuracy: 0.8060\n",
+      "Epoch 2/5\n",
+      "47/47 [==============================] - 51s 1s/step - loss: 0.4599 - accuracy: 0.7920 - val_loss: 0.3964 - val_accuracy: 0.8540\n",
+      "Epoch 3/5\n",
+      "47/47 [==============================] - 50s 1s/step - loss: 0.4386 - accuracy: 0.8120 - val_loss: 0.4470 - val_accuracy: 0.8020\n",
+      "Epoch 4/5\n",
+      "47/47 [==============================] - 51s 1s/step - loss: 0.3695 - accuracy: 0.8367 - val_loss: 0.3922 - val_accuracy: 0.8040\n",
+      "Epoch 5/5\n",
+      "47/47 [==============================] - 51s 1s/step - loss: 0.3127 - accuracy: 0.8787 - val_loss: 0.3809 - val_accuracy: 0.8160\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Build a CNN model (same as the Tiny VGG on the CNN explainer website)\n",
+    "model_2 = tf.keras.Sequential([\n",
+    "    # VGG -> Notice 2 Conv2D and 1 MaxPooling2D\n",
+    "    tf.keras.layers.Conv2D(filters=10, kernel_size=3, activation='relu', input_shape=(224, 224, 3)),\n",
+    "    tf.keras.layers.Conv2D(10, 3, activation='relu'),\n",
+    "    tf.keras.layers.MaxPooling2D(pool_size=2, padding=\"valid\"),\n",
+    "    tf.keras.layers.Conv2D(10, 3, activation=\"relu\"),\n",
+    "    tf.keras.layers.Conv2D(10, 3, activation=\"relu\"),\n",
+    "    tf.keras.layers.MaxPooling2D(2),\n",
+    "    # Flatten the images before the output layer\n",
+    "    tf.keras.layers.Flatten(),\n",
+    "    tf.keras.layers.Dense(1, activation=\"sigmoid\")\n",
+    "])\n",
+    "\n",
+    "# Compile the model\n",
+    "model_2.compile(loss=\"binary_crossentropy\", optimizer=\"adam\", metrics=['accuracy'])\n",
+    "\n",
+    "# Fit the model\n",
+    "history_2 = model_2.fit(train_data, epochs=5, \n",
+    "                        steps_per_epoch=len(train_data), \n",
+    "                        validation_data=valid_data, \n",
+    "                        validation_steps=len(valid_data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "d0d85ca8",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " conv2d (Conv2D)             (None, 222, 222, 10)      280       \n",
+      "                                                                 \n",
+      " conv2d_1 (Conv2D)           (None, 220, 220, 10)      910       \n",
+      "                                                                 \n",
+      " max_pooling2d (MaxPooling2  (None, 110, 110, 10)      0         \n",
+      " D)                                                              \n",
+      "                                                                 \n",
+      " conv2d_2 (Conv2D)           (None, 108, 108, 10)      910       \n",
+      "                                                                 \n",
+      " conv2d_3 (Conv2D)           (None, 106, 106, 10)      910       \n",
+      "                                                                 \n",
+      " max_pooling2d_1 (MaxPoolin  (None, 53, 53, 10)        0         \n",
+      " g2D)                                                            \n",
+      "                                                                 \n",
+      " flatten (Flatten)           (None, 28090)             0         \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 1)                 28091     \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 31101 (121.49 KB)\n",
+      "Trainable params: 31101 (121.49 KB)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_1.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "f27f3a72",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_1\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " conv2d_4 (Conv2D)           (None, 222, 222, 10)      280       \n",
+      "                                                                 \n",
+      " conv2d_5 (Conv2D)           (None, 220, 220, 10)      910       \n",
+      "                                                                 \n",
+      " max_pooling2d_2 (MaxPoolin  (None, 110, 110, 10)      0         \n",
+      " g2D)                                                            \n",
+      "                                                                 \n",
+      " conv2d_6 (Conv2D)           (None, 108, 108, 10)      910       \n",
+      "                                                                 \n",
+      " conv2d_7 (Conv2D)           (None, 106, 106, 10)      910       \n",
+      "                                                                 \n",
+      " max_pooling2d_3 (MaxPoolin  (None, 53, 53, 10)        0         \n",
+      " g2D)                                                            \n",
+      "                                                                 \n",
+      " flatten_1 (Flatten)         (None, 28090)             0         \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 1)                 28091     \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 31101 (121.49 KB)\n",
+      "Trainable params: 31101 (121.49 KB)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_2.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79b75b8b",
+   "metadata": {},
+   "source": [
+    "**Exercise:** Go through the CNN explainer website for a minimum of 10-mins and compare the neural network I built with theirs: <a href=\"https://poloclub.github.io/cnn-explainer\">https://poloclub.github.io/cnn-explainer</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0f38307",
+   "metadata": {},
+   "source": [
+    "## Non CNN model on Image data. Click <a href=\"./02 - Non CNN for Image.ipynb\">here</a>."
+   ]
   }
  ],
  "metadata": {
