--- a/04 - Convolutional Neural Network/code/02 - Non CNN for Image.ipynb
+++ b/04 - Convolutional Neural Network/code/02 - Non CNN for Image.ipynb
@@ -5,7 +5,9 @@
    "id": "093b5a42",
    "metadata": {},
    "source": [
-    "# Non CNN Model for Image data"
+    "# Non CNN Model for Image data\n",
+    "\n",
+    "Fitting image data to Non CNN model. It works well but the accuracy isn't as good as CNN model."
    ]
   },
   {
@@ -21,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "153102a4",
+   "id": "397dfe2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ae890256",
+   "id": "f38527b3",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "9918c10c",
+   "id": "80c4dace",
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +84,9 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "4c93fa29",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -125,11 +129,206 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "80299e71",
+   "execution_count": 15,
+   "id": "a95725aa",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_1\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " flatten_1 (Flatten)         (None, 150528)            0         \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 4)                 602116    \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 4)                 20        \n",
+      "                                                                 \n",
+      " dense_2 (Dense)             (None, 1)                 5         \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 602141 (2.30 MB)\n",
+      "Trainable params: 602141 (2.30 MB)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_1.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67489139",
+   "metadata": {},
+   "source": [
+    "**Model 2: Increase the learning rate**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "496c13dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "47/47 [==============================] - 18s 353ms/step - loss: 7.2869 - accuracy: 0.5020 - val_loss: 0.6936 - val_accuracy: 0.5000\n",
+      "Epoch 2/5\n",
+      "47/47 [==============================] - 16s 349ms/step - loss: 0.6934 - accuracy: 0.4867 - val_loss: 0.6932 - val_accuracy: 0.5000\n",
+      "Epoch 3/5\n",
+      "47/47 [==============================] - 18s 381ms/step - loss: 0.6933 - accuracy: 0.4773 - val_loss: 0.6931 - val_accuracy: 0.5000\n",
+      "Epoch 4/5\n",
+      "47/47 [==============================] - 17s 364ms/step - loss: 0.6934 - accuracy: 0.4947 - val_loss: 0.6932 - val_accuracy: 0.5000\n",
+      "Epoch 5/5\n",
+      "47/47 [==============================] - 18s 376ms/step - loss: 0.6936 - accuracy: 0.4800 - val_loss: 0.6931 - val_accuracy: 0.5000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Set random seed\n",
+    "tf.random.set_seed(42)\n",
+    "\n",
+    "# Create a model to replicate tensorflow playground\n",
+    "model_2 = tf.keras.Sequential([\n",
+    "    tf.keras.layers.Flatten(input_shape=(224, 224, 3)),\n",
+    "    tf.keras.layers.Dense(4, activation=\"relu\"),\n",
+    "    tf.keras.layers.Dense(4, activation=\"relu\"),\n",
+    "    tf.keras.layers.Dense(1, activation=\"sigmoid\")\n",
+    "])\n",
+    "\n",
+    "# Compile the model\n",
+    "model_2.compile(loss=\"binary_crossentropy\", \n",
+    "                optimizer=tf.keras.optimizers.Adam(learning_rate=0.01), \n",
+    "                metrics=['accuracy'])\n",
+    "\n",
+    "# Fit the model\n",
+    "history_2 = model_2.fit(train_data, epochs=5, \n",
+    "                        steps_per_epoch=len(train_data), \n",
+    "                        validation_data=test_data, validation_steps=len(test_data))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dcd880e1",
+   "metadata": {},
+   "source": [
+    "**Model 3: Increase number of hidden units (x25) and add another hidden layer**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "f0b039cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "47/47 [==============================] - 21s 418ms/step - loss: 66.6460 - accuracy: 0.5853 - val_loss: 1.1211 - val_accuracy: 0.7560\n",
+      "Epoch 2/5\n",
+      "47/47 [==============================] - 19s 398ms/step - loss: 0.6786 - accuracy: 0.7373 - val_loss: 1.6209 - val_accuracy: 0.5100\n",
+      "Epoch 3/5\n",
+      "47/47 [==============================] - 19s 401ms/step - loss: 0.7097 - accuracy: 0.6973 - val_loss: 0.6030 - val_accuracy: 0.7100\n",
+      "Epoch 4/5\n",
+      "47/47 [==============================] - 19s 412ms/step - loss: 0.6919 - accuracy: 0.6867 - val_loss: 0.5248 - val_accuracy: 0.7560\n",
+      "Epoch 5/5\n",
+      "47/47 [==============================] - 19s 400ms/step - loss: 0.5284 - accuracy: 0.7487 - val_loss: 0.4666 - val_accuracy: 0.7820\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Set random seed\n",
+    "tf.random.set_seed(42)\n",
+    "\n",
+    "# Create a model to replicate tensorflow playground\n",
+    "model_3 = tf.keras.Sequential([\n",
+    "    tf.keras.layers.Flatten(input_shape=(224, 224, 3)),\n",
+    "    tf.keras.layers.Dense(100, activation=\"relu\"),\n",
+    "    tf.keras.layers.Dense(100, activation=\"relu\"),\n",
+    "    tf.keras.layers.Dense(100, activation=\"relu\"),\n",
+    "    tf.keras.layers.Dense(1, activation=\"sigmoid\")\n",
+    "])\n",
+    "\n",
+    "# Compile the model\n",
+    "model_3.compile(loss=\"binary_crossentropy\", \n",
+    "                optimizer=tf.keras.optimizers.Adam(learning_rate=0.01), \n",
+    "                metrics=['accuracy'])\n",
+    "\n",
+    "# Fit the model\n",
+    "history_3 = model_3.fit(train_data, epochs=5, \n",
+    "                        steps_per_epoch=len(train_data), \n",
+    "                        validation_data=test_data, validation_steps=len(test_data))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7007ace6",
+   "metadata": {},
+   "source": [
+    "**Model 3 is much better. The accuracy is `~75%` and the validation accuracy is `~78%`. Nonetheless, the model is not as good as training with CNN which has an accuracy of `86%`...**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "fef0bb6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_3\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " flatten_3 (Flatten)         (None, 150528)            0         \n",
+      "                                                                 \n",
+      " dense_6 (Dense)             (None, 100)               15052900  \n",
+      "                                                                 \n",
+      " dense_7 (Dense)             (None, 100)               10100     \n",
+      "                                                                 \n",
+      " dense_8 (Dense)             (None, 100)               10100     \n",
+      "                                                                 \n",
+      " dense_9 (Dense)             (None, 1)                 101       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 15073201 (57.50 MB)\n",
+      "Trainable params: 15073201 (57.50 MB)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_3.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90fb8051",
+   "metadata": {},
+   "source": [
+    "> From `model 3` summary, even with over 15 million trainable parameters, the model perform not really great compared to CNN model of over 31 thousand trainable parameters."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ce23484",
+   "metadata": {},
+   "source": [
+    "## Breakdown of CNN model? Click <a href=\"./03 - Breaking down CNN model.ipynb\">here</a>"
+   ]
   }
  ],
  "metadata": {
